new style, default rooms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,15 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<nav class="navbar navbar-expand-sm bg-dark">
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <!-- Brand/logo -->
+  <a class="navbar-brand" href="#">
+    <img src="../assets/img/fav.png" alt="logo" style="width:40px;">
+  </a>
+
+  <!-- Links -->
   <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="#">JukBox</a>
-    </li>
     <li class="nav-item">
       <a class="nav-link" href="https://silasstulz.ch/projects.html">About</a>
     </li>
@@ -15,7 +19,6 @@
     <li *ngIf="loggedIn()" class="nav-item">
       <span class="text-primary nav-link" (click)="logout()">Logout</span>
     </li>
-
   </ul>
 </nav>
 <router-outlet></router-outlet>
