--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,21 @@
-<div class="container col-md-10 col-lg-8 col-xl-7 mx-auto">
-  <h3> Please login with your Spotify Account to proceed</h3>
-  <h4> You can only listen to the songs if you have a Spotify Premium Account</h4>
-  <p style="color: red;"> This is a beta version, be aware that you may encounter bugs or an unfinished product</p>
-  <button class="btn btn-primary" (click)="getCode()">Log in</button>
+<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/header.jpg');">
+  <div class="filter"></div>
+  <div class="container">
+    <div class="title-brand">
+      <div class="angular-logo" style="max-width: 250px;">
+        <img src="../../assets/img/log.png" alt="">
+      </div>
+      <div class="motto text-center">
+        <h1>Listen to your favorite music, with friends</h1>
+        <h3>jukebox.li is a collection of collaborative playlists, where you can listen to the same music as your
+          friends, synchronously</h3>
+        <br/>
+        <button type="button" class="btn btn-outline-primary btn-round" (click)="getCode()">Start</button>
+      </div>
+    </div>
+  </div>
 </div>
+
+
+
+
