--- a/src/app/playlist/playlist.component.html
+++ b/src/app/playlist/playlist.component.html
@@ -1,30 +1,66 @@
-<header class="masthead text-black text-center">
-  <div class="overlay"></div>
+<header class="text-black text-center">
   <div class="container">
     <div class="row">
-      <div class="col-xl-9 mx-auto">
+      <div class="col-xl-12 mx-auto mt-5">
         <h1 class="mb-5">Join a existing playlist or create a new one!</h1>
-        <h4 class="mb-5"> To join a existing one, enter the identifier provided by the creator. You can only create one playlist at a time</h4>
+        <h4 class="mb-5"> To join a existing one, enter the identifier provided by the creator.</h4>
       </div>
       <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <div class="form-row">
-            <div class="col-12 col-md-9 mb-2 mb-md-0">
-              <input [value]="identifierPlaylist" (input)="identifierPlaylist = $event.target.value" type="text"
-                     placeholder="Identifier" class="form-control form-control-lg">
-            </div>
-            <div class="col-12 col-md-3">
-              <button (click)="joinPlaylist()" type="submit" class="btn btn-block btn-lg btn-primary">Join Playlist</button>
-            </div>
+        <div class="form-row">
+          <div class="col-12 col-md-9 mb-2 mb-md-0">
+            <input [value]="identifierPlaylist" (input)="identifierPlaylist = $event.target.value" type="text"
+                   placeholder="Identifier" class="form-control form-control-lg">
           </div>
-            <button [disabled]="hasPlaylist" (click)="createPlaylist()" class="btn btn-block btn-lg btn-primary mt-5"> Create New Playlist</button>
+          <div class="col-12 col-md-3">
+            <button (click)="joinPlaylist()" type="submit" class="btn btn-block btn-lg btn-primary">Join
+            </button>
+          </div>
+        </div>
+        <button [disabled]="hasPlaylist" (click)="createPlaylist()" class="btn btn-block btn-lg btn-primary">
+          Create
+        </button>
       </div>
     </div>
   </div>
-  <ul class="playlists list-group mt-5">
-    <li class="list-group-item" *ngFor="let playlist of playlists"><button class="btn btn-primary mb-5" [routerLink]="['/playlist', playlist.identifier]">
-      {{playlist.identifier}}</button> <button class="btn btn-dark mb-5" *ngIf="isCreator(playlist)" (click)="deletePlaylist(playlist)"> - </button>
-    </li>
-  </ul>
+
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4" *ngFor="let playlist of playlists" style="margin-bottom: 20px">
+          <div class="card bg-primary">
+            <div class="card-body" [routerLink]="['/playlist', playlist.identifier]">
+              <h5 class="card-title text-white">{{playlist.identifier}}</h5>
+              <p class="card-text text-white" style=""></p>
+            </div>
+            <button class="btn btn-danger" *ngIf="isCreator(playlist)" (click)="deletePlaylist(playlist)"> Delete </button>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+
+  <h1> Public Playlists</h1>
+
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4" *ngFor="let playlist of defaultPlaylists" style="margin-bottom: 20px">
+          <div class="card bg-dark text-white" [routerLink]="['/playlist', playlist.identifier]">
+            <img class="card-img" src="../../assets/img/{{playlist.identifier}}.jpg" alt="{{playlist.identifier}}">
+            <div class="card-img-overlay d-flex flex-column">
+              <h3 class="card-text font-weight-bold"><span class="mr-auto">{{playlist.identifier}}</span></h3>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
 </header>
+
+
+
 
 
